# fantastic-octo-train

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
task1/: get_primes.py
task2/: download_links.py
task3/: README.md
